# erpiko

./: CMakeLists.txt
patch/: cmake.patch
src/: sim-openssl.h
